--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -495,7 +495,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
               </div>
             </main>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
