--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -1481,7 +1481,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
               </main>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
