--- a/edit/about.html
+++ b/edit/about.html
@@ -613,7 +613,7 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
               </main>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
