--- a/experienceType.html
+++ b/experienceType.html
@@ -122,7 +122,7 @@
         vertical-align: middle !important;
         margin-right: 0 !important;
       }
-      ._b21f4g {
+      .container__border-0 {
         border: 0px !important;
         clip: rect(0 0 0 0) !important;
         -webkit-clip-path: inset(100%) !important;
@@ -3266,7 +3266,7 @@
               </main>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
