--- a/inbox.html
+++ b/inbox.html
@@ -356,7 +356,7 @@
       .contents {
         display: contents !important;
       }
-      ._b21f4g {
+      .container__border-0 {
         border: 0px !important;
         clip: rect(0 0 0 0) !important;
         -webkit-clip-path: inset(100%) !important;
@@ -7406,7 +7406,7 @@
                   ></div>
                   <fieldset class="_1kxoodi" disabled="">
                     <div class="contents">
-                      <div class="_b21f4g" aria-hidden="true"></div>
+                      <div class="container__border-0" aria-hidden="true"></div>
                       <div class="contents">
                         <div
                           data-overlay-md=""
@@ -7561,7 +7561,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="_b21f4g" aria-hidden="true"></div>
+                      <div class="container__border-0" aria-hidden="true"></div>
                     </div>
                   </fieldset>
                   <div class="_1szkpit">
@@ -9112,7 +9112,7 @@
               </div>
             </main>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
