--- a/merchandising.html
+++ b/merchandising.html
@@ -4151,18 +4151,18 @@
                     </main>
                   </div>
                 </div>
-                <div class="t2pjd0h dir dir-ltr">
-                  <div class="t6qlz27 dir dir-ltr" data-testid="Incoming"></div>
+                <div class="incoming__container dir dir-ltr">
+                  <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
                 </div>
                 <div
-                  class="t1nrbpkt dir dir-ltr"
+                  class="app-theme-visibility dir dir-ltr"
                   aria-hidden="true"
                   inert="true"
                 ></div>
               </div>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
@@ -4950,12 +4950,12 @@
                                                 class="header__nav"
                                                 aria-label="Profile"
                                               >
-                                                <div class="_176ugpa">
+                                                <div class="header__nav-btn-wrapper">
                                                   <a
-                                                    class="c1jdlqzl c177491c dir dir-ltr"
+                                                    class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
                                                     href="/hosting"
                                                     ><div
-                                                      class="l1hgmivi dir dir-ltr"
+                                                      class="header__nav-btn-container-text dir dir-ltr"
                                                     >
                                                       Switch to hosting
                                                     </div></a
@@ -4963,12 +4963,12 @@
                                                   <div class="_1ubw29">
                                                     <button
                                                       type="button"
-                                                      class="c1jdlqzl c177491c dir dir-ltr"
+                                                      class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
                                                       aria-expanded="false"
                                                       aria-label="Choose a language and currency"
                                                     >
                                                       <div
-                                                        class="l1hgmivi dir dir-ltr"
+                                                        class="header__nav-btn-container-text dir dir-ltr"
                                                       >
                                                         <div
                                                           class="_z5mecy"
@@ -4997,10 +4997,10 @@
                                                   </div>
                                                 </div>
                                                 <div class="box-border">
-                                                  <div class="_167wsvl">
+                                                  <div class="header__nav-d-inline-relative">
                                                     <button
                                                       type="button"
-                                                      class="_1h75pd34"
+                                                      class="header__nav-profile-btn"
                                                       aria-expanded="false"
                                                       aria-label="Main navigation menu. 2 notifications."
                                                       data-testid="cypress-headernav-profile"
@@ -5038,9 +5038,9 @@
                                                           </g>
                                                         </svg>
                                                       </div>
-                                                      <div class="_1xp7o8n">
+                                                      <div class="header__nav-profile-img-wrapper">
                                                         <img
-                                                          class="_1wzp0xs"
+                                                          class="header__nav-profile-img"
                                                           src="https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_medium"
                                                           alt=""
                                                         />
@@ -13365,18 +13365,18 @@
                     </div>
                   </div>
                 </div>
-                <div class="t2pjd0h dir dir-ltr">
-                  <div class="t6qlz27 dir dir-ltr" data-testid="Incoming"></div>
+                <div class="incoming__container dir dir-ltr">
+                  <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
                 </div>
                 <div
-                  class="t1nrbpkt dir dir-ltr"
+                  class="app-theme-visibility dir dir-ltr"
                   aria-hidden="true"
                   inert="true"
                 ></div>
               </div>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
