--- a/profile.html
+++ b/profile.html
@@ -75,25 +75,25 @@
                                   </svg></div
                               ></a>
                             </div>
-                            <div class="_1douprn"></div>
+                            <div class="header__nav-spacer"></div>
                             <div class="header__nav-wrapper">
                               <nav class="header__nav" aria-label="Profile">
-                                <div class="_176ugpa">
+                                <div class="header__nav-btn-wrapper">
                                   <a
-                                    class="c1jdlqzl c177491c dir dir-ltr"
+                                    class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
                                     href="/host/homes"
-                                    ><div class="l1hgmivi dir dir-ltr">
+                                    ><div class="header__nav-btn-container-text dir dir-ltr">
                                       Switch to hosting
                                     </div></a
                                   >
                                   <div class="_1ubw29">
                                     <button
                                       type="button"
-                                      class="c1jdlqzl c177491c dir dir-ltr"
+                                      class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
                                       aria-expanded="false"
                                       aria-label="Choose a language and currency"
                                     >
-                                      <div class="l1hgmivi dir dir-ltr">
+                                      <div class="header__nav-btn-container-text dir dir-ltr">
                                         <div class="_z5mecy" aria-hidden="true">
                                           <svg
                                             viewBox="0 0 16 16"
@@ -118,10 +118,10 @@
                                   </div>
                                 </div>
                                 <div class="box-border">
-                                  <div class="_167wsvl">
+                                  <div class="header__nav-d-inline-relative">
                                     <button
                                       type="button"
-                                      class="_1h75pd34"
+                                      class="header__nav-profile-btn"
                                       aria-expanded="false"
                                       aria-label="Main navigation menu"
                                       data-testid="cypress-headernav-profile"
@@ -150,9 +150,9 @@
                                           </g>
                                         </svg>
                                       </div>
-                                      <div class="_1xp7o8n">
+                                      <div class="header__nav-profile-img-wrapper">
                                         <img
-                                          class="_1wzp0xs"
+                                          class="header__nav-profile-img"
                                           src="https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_medium"
                                           alt=""
                                         />
@@ -165,7 +165,7 @@
                             </div>
                           </div>
                         </header>
-                        <div class="_1o0em9y"></div>
+                        <div class="page-shell__navbar"></div>
                       </div>
                     </div>
                     <main id="site-content">
@@ -3210,18 +3210,18 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                     </footer>
                   </div>
                 </div>
-                <div class="t2pjd0h dir dir-ltr">
-                  <div class="t6qlz27 dir dir-ltr" data-testid="Incoming"></div>
+                <div class="incoming__container dir dir-ltr">
+                  <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
                 </div>
                 <div
-                  class="t1nrbpkt dir dir-ltr"
+                  class="app-theme-visibility dir dir-ltr"
                   aria-hidden="true"
                   inert="true"
                 ></div>
               </div>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
@@ -3234,7 +3234,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
       <section>
         <div class="modal__container" data-testid="modal-container">
           <div class="contents">
-            <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+            <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
             <div class="contents">
               <div
                 role="dialog"
@@ -3403,11 +3403,11 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                 </div>
               </div>
             </div>
-            <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+            <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
           </div>
         </div>
       </section>
-      <div class="_b21f4g">
+      <div class="container__border-0">
         <div aria-live="polite" aria-atomic="true"></div>
         <div aria-live="assertive" aria-atomic="true"></div>
       </div>
