--- a/submission/tq.html
+++ b/submission/tq.html
@@ -1174,7 +1174,7 @@
               </main>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
