--- a/transaction_history.html
+++ b/transaction_history.html
@@ -182,7 +182,7 @@
                                             </div></a
                                           >
                                         </div>
-                                        <div class="_167wsvl">
+                                        <div class="header__nav-d-inline-relative">
                                           <div class="inline-block">
                                             <div
                                               class="dir dir-ltr"
@@ -285,7 +285,7 @@
                                       data-section-id="navBarNotificationsMenu"
                                     >
                                       <div class="_e882jw">
-                                        <div class="_167wsvl">
+                                        <div class="header__nav-d-inline-relative">
                                           <div>
                                             <div>
                                               <button
@@ -344,7 +344,7 @@
                                           aria-label="Profile"
                                         >
                                           <div class="box-border">
-                                            <div class="_167wsvl">
+                                            <div class="header__nav-d-inline-relative">
                                               <button
                                                 type="button"
                                                 class="_1u0z83f5"
@@ -381,7 +381,7 @@
                                                 </div>
                                                 <div class="_x3dxq1">
                                                   <img
-                                                    class="_1wzp0xs"
+                                                    class="header__nav-profile-img"
                                                     src="https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_tiny"
                                                     alt=""
                                                   />
@@ -1246,7 +1246,7 @@
               </div>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
