--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -488,7 +488,7 @@ Cheerful private villa with pool</textarea
               </div>
             </main>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
