--- a/dashboard.html
+++ b/dashboard.html
@@ -1163,7 +1163,7 @@
         color: inherit !important;
         text-decoration: none !important;
       }
-      ._b21f4g {
+      .container__border-0 {
         border: 0px !important;
         clip: rect(0 0 0 0) !important;
         -webkit-clip-path: inset(100%) !important;
@@ -3641,7 +3641,7 @@
               </footer>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
