--- a/edit/title.html
+++ b/edit/title.html
@@ -485,7 +485,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
               </main>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
