--- a/edit/what.html
+++ b/edit/what.html
@@ -895,7 +895,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
               </main>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
