--- a/explore-where.html
+++ b/explore-where.html
@@ -13,7 +13,7 @@
       <section>
         <div class="_j292vx" data-testid="modal-container">
           <div class="contents">
-            <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+            <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
             <div class="contents">
               <div
                 role="dialog"
@@ -1095,11 +1095,11 @@
                 </div>
               </div>
             </div>
-            <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+            <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
           </div>
         </div>
       </section>
-      <div class="_b21f4g">
+      <div class="container__border-0">
         <div aria-live="polite" aria-atomic="true"></div>
         <div aria-live="assertive" aria-atomic="true"></div>
       </div>
