--- a/invite-friends.html
+++ b/invite-friends.html
@@ -62,23 +62,23 @@
                       </svg></div
                   ></a>
                 </div>
-                <div class="_1douprn"></div>
+                <div class="header__nav-spacer"></div>
                 <div class="header__nav-wrapper">
                   <nav class="header__nav" aria-label="Profile">
-                    <div class="_176ugpa">
-                      <a class="c1jdlqzl c177491c dir dir-ltr" href="/hosting"
-                        ><div class="l1hgmivi dir dir-ltr">
+                    <div class="header__nav-btn-wrapper">
+                      <a class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr" href="/hosting"
+                        ><div class="header__nav-btn-container-text dir dir-ltr">
                           Switch to hosting
                         </div></a
                       >
                       <div class="_1ubw29">
                         <button
                           type="button"
-                          class="c1jdlqzl c177491c dir dir-ltr"
+                          class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
                           aria-expanded="false"
                           aria-label="Choose a language and currency"
                         >
-                          <div class="l1hgmivi dir dir-ltr">
+                          <div class="header__nav-btn-container-text dir dir-ltr">
                             <div class="_z5mecy" aria-hidden="true">
                               <svg
                                 viewBox="0 0 16 16"
@@ -103,10 +103,10 @@
                       </div>
                     </div>
                     <div class="box-border">
-                      <div class="_167wsvl">
+                      <div class="header__nav-d-inline-relative">
                         <button
                           type="button"
-                          class="_1h75pd34"
+                          class="header__nav-profile-btn"
                           aria-expanded="false"
                           aria-label="Main navigation menu. 2 notifications."
                           data-testid="cypress-headernav-profile"
@@ -135,9 +135,9 @@
                               </g>
                             </svg>
                           </div>
-                          <div class="_1xp7o8n">
+                          <div class="header__nav-profile-img-wrapper">
                             <img
-                              class="_1wzp0xs"
+                              class="header__nav-profile-img"
                               src="https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_medium"
                               alt=""
                             />
@@ -782,7 +782,7 @@
               </footer>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
