--- a/products.html
+++ b/products.html
@@ -8356,22 +8356,22 @@
                                     </div>
                                     <div class="header__nav-wrapper">
                                       <nav class="header__nav" aria-label="Profile">
-                                        <div class="_176ugpa">
+                                        <div class="header__nav-btn-wrapper">
                                           <a
-                                            class="c1jdlqzl c177491c dir dir-ltr"
+                                            class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
                                             href="/host/homes"
-                                            ><div class="l1hgmivi dir dir-ltr">
+                                            ><div class="header__nav-btn-container-text dir dir-ltr">
                                               Become a Host
                                             </div></a
                                           >
                                           <div class="_1ubw29">
                                             <button
                                               type="button"
-                                              class="c1jdlqzl c177491c dir dir-ltr"
+                                              class="header__nav-btn-container header__nav-btn-container-color dir dir-ltr"
                                               aria-expanded="false"
                                               aria-label="Choose a language and currency"
                                             >
-                                              <div class="l1hgmivi dir dir-ltr">
+                                              <div class="header__nav-btn-container-text dir dir-ltr">
                                                 <div
                                                   class="_z5mecy"
                                                   aria-hidden="true"
@@ -8399,10 +8399,10 @@
                                           </div>
                                         </div>
                                         <div class="box-border">
-                                          <div class="_167wsvl">
+                                          <div class="header__nav-d-inline-relative">
                                             <button
                                               type="button"
-                                              class="_1h75pd34"
+                                              class="header__nav-profile-btn"
                                               aria-expanded="false"
                                               aria-label="Main navigation menu. 1 notification."
                                               data-testid="cypress-headernav-profile"
@@ -8434,9 +8434,9 @@
                                                   </g>
                                                 </svg>
                                               </div>
-                                              <div class="_1xp7o8n">
+                                              <div class="header__nav-profile-img-wrapper">
                                                 <img
-                                                  class="_1wzp0xs"
+                                                  class="header__nav-profile-img"
                                                   src="https://a0.muscache.com/defaults/user_pic-50x50.png?v=3"
                                                   alt=""
                                                 />
@@ -8449,7 +8449,7 @@
                                     </div>
                                   </div>
                                 </header>
-                                <div class="_1o0em9y"></div>
+                                <div class="page-shell__navbar"></div>
                               </div>
                             </div>
                             <main id="site-content">
@@ -21217,18 +21217,18 @@
                   </div>
                 </div>
                 <div class="dprtsy3 g1rrwumj dir dir-ltr"></div>
-                <div class="t2pjd0h dir dir-ltr">
-                  <div class="t6qlz27 dir dir-ltr" data-testid="Incoming"></div>
+                <div class="incoming__container dir dir-ltr">
+                  <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
                 </div>
                 <div
-                  class="t1nrbpkt dir dir-ltr"
+                  class="app-theme-visibility dir dir-ltr"
                   aria-hidden="true"
                   inert="true"
                 ></div>
               </div>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
