--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -502,7 +502,7 @@
               </div>
             </main>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
