--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -45,7 +45,7 @@
                   <div class="cell-middle">
                     <div>
                       <div class="contents">
-                        <div class="_b21f4g" aria-hidden="true"></div>
+                        <div class="container__border-0" aria-hidden="true"></div>
                         <div class="contents">
                           <div class="_ousp44">
                             <div>
@@ -81,7 +81,7 @@
                           </div>
                           <div class="_shsmsj"></div>
                         </div>
-                        <div class="_b21f4g" aria-hidden="true"></div>
+                        <div class="container__border-0" aria-hidden="true"></div>
                       </div>
                     </div>
                   </div>
@@ -529,7 +529,7 @@
               </div>
             </main>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
