--- a/submission/overview.html
+++ b/submission/overview.html
@@ -1183,7 +1183,7 @@
               </main>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
