--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1184,7 +1184,7 @@
               </main>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
@@ -1213,7 +1213,7 @@
     >
       <div class="modal-dialog modal-dialog-centered" class="modal__container">
         <div class="contents">
-          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+          <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
           <div class="contents">
             <div
               role="dialog"
@@ -1825,7 +1825,7 @@
               </footer>
             </div>
           </div>
-          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+          <div class="container__border-0" aria-hidden="true" tabindex="0"></div>
         </div>
       </div>
     </div>
