--- a/submission/title.html
+++ b/submission/title.html
@@ -1193,7 +1193,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
               </main>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
