--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1473,7 +1473,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
               </main>
             </div>
           </div>
-          <div class="_b21f4g">
+          <div class="container__border-0">
             <div aria-live="polite" aria-atomic="true"></div>
             <div aria-live="assertive" aria-atomic="true"></div>
           </div>
