--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -531,7 +531,7 @@
                                                     >
                                                   </div>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="page-shell-mobile__container-ml-16">
                                                   <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="underTwo-row-title"
@@ -612,7 +612,7 @@
                                                     experience.
                                                   </div>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="page-shell-mobile__container-ml-16">
                                                   <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="Tag:4804-row-title"
@@ -660,7 +660,7 @@
                                                     provide.
                                                   </div>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="page-shell-mobile__container-ml-16">
                                                   <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="Tag:4802-row-title"
@@ -707,7 +707,7 @@
                                                     senses of guests.
                                                   </div>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="page-shell-mobile__container-ml-16">
                                                   <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="Tag:4805-row-title"
@@ -996,7 +996,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                     >
                                                   </div>
                                                 </div>
-                                                <div class="_1mqc21n">
+                                                <div class="page-shell-mobile__container-ml-16">
                                                   <span class="explore-filter-menu__list-content"
                                                     ><input
                                                       aria-labelledby="requireIdVerification-row-title"
