--- a/edit/photos.html
+++ b/edit/photos.html
@@ -1775,7 +1775,7 @@
                                       class="_z8r60f"
                                       style="position: relative"
                                     >
-                                      <div class="_14tkmhr">
+                                      <div class="page-shell-mobile__lang-icon-wrapper">
                                         <div
                                           class="img-middle"
                                           role="img"
@@ -1834,7 +1834,7 @@
                                           ></div>
                                         </div>
                                       </div>
-                                      <div class="_14tkmhr">
+                                      <div class="page-shell-mobile__lang-icon-wrapper">
                                         <div
                                           class="img-middle"
                                           role="img"
@@ -1893,7 +1893,7 @@
                                           ></div>
                                         </div>
                                       </div>
-                                      <div class="_14tkmhr">
+                                      <div class="page-shell-mobile__lang-icon-wrapper">
                                         <div
                                           class="img-middle"
                                           role="img"
@@ -1952,7 +1952,7 @@
                                           ></div>
                                         </div>
                                       </div>
-                                      <div class="_14tkmhr">
+                                      <div class="page-shell-mobile__lang-icon-wrapper">
                                         <div
                                           class="img-middle"
                                           role="img"
@@ -2011,7 +2011,7 @@
                                           ></div>
                                         </div>
                                       </div>
-                                      <div class="_14tkmhr">
+                                      <div class="page-shell-mobile__lang-icon-wrapper">
                                         <div
                                           class="img-middle"
                                           role="img"
@@ -2070,7 +2070,7 @@
                                           ></div>
                                         </div>
                                       </div>
-                                      <div class="_14tkmhr">
+                                      <div class="page-shell-mobile__lang-icon-wrapper">
                                         <div
                                           class="img-middle"
                                           role="img"
@@ -2129,7 +2129,7 @@
                                           ></div>
                                         </div>
                                       </div>
-                                      <div class="_14tkmhr">
+                                      <div class="page-shell-mobile__lang-icon-wrapper">
                                         <div
                                           class="img-middle"
                                           role="img"
