--- a/inbox.html
+++ b/inbox.html
@@ -7463,7 +7463,7 @@
                                         role="button"
                                         aria-expanded="true"
                                         class="_1hqm3ym0"
-                                        ><div class="_14tkmhr">
+                                        ><div class="page-shell-mobile__lang-icon-wrapper">
                                           <svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -7494,7 +7494,7 @@
                                         role="button"
                                         aria-expanded="true"
                                         class="_12izjrf"
-                                        ><div class="_14tkmhr">
+                                        ><div class="page-shell-mobile__lang-icon-wrapper">
                                           <svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
@@ -7530,7 +7530,7 @@
                                           role="button"
                                           aria-expanded="true"
                                           class="_12izjrf"
-                                          ><div class="_14tkmhr">
+                                          ><div class="page-shell-mobile__lang-icon-wrapper">
                                             <svg
                                               viewBox="0 0 16 16"
                                               xmlns="http://www.w3.org/2000/svg"
