--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1267,7 +1267,7 @@
                                         have a confirmation code
                                       </div>
                                     </div>
-                                    <div class="_1mqc21n">
+                                    <div class="page-shell-mobile__container-ml-16">
                                       <button
                                         aria-checked="false"
                                         aria-labelledby="partner-switch-row-title"
@@ -1403,7 +1403,7 @@
             </button>
           </div>
           <header class="_1youxq0">
-            <div class="_1tng6ym"></div>
+            <div class="modal__header-wrapper"></div>
             <div class="modal__heading">
               <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                 <div class="_1q9sh65">
@@ -1413,7 +1413,7 @@
                 </div>
               </h1>
             </div>
-            <div class="_rrmdgl"></div>
+            <div class="modal__heading-wrapper"></div>
           </header>
           <div class="modal__body">
             <div
@@ -1611,7 +1611,7 @@
             </button>
           </div>
           <header class="_1youxq0">
-            <div class="_1tng6ym"></div>
+            <div class="modal__header-wrapper"></div>
             <div class="modal__heading">
               <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                 <div class="_1q9sh65">
@@ -1621,7 +1621,7 @@
                 </div>
               </h1>
             </div>
-            <div class="_rrmdgl"></div>
+            <div class="modal__heading-wrapper"></div>
           </header>
           <div class="modal__body">
             <div
