--- a/submission/review.html
+++ b/submission/review.html
@@ -1315,7 +1315,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1mqc21n">
+                                  <div class="page-shell-mobile__container-ml-16">
                                     <span class="explore-filter-menu__list-content"
                                       ><input
                                         name="info_is_compliant_with_all_laws"
@@ -1381,7 +1381,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_1mqc21n">
+                                  <div class="page-shell-mobile__container-ml-16">
                                     <span class="explore-filter-menu__list-content"
                                       ><input
                                         name="info_is_compliant_with_airbnb_policies"
