--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1248,13 +1248,13 @@
                 </button>
               </div>
               <header class="modal__header">
-                <div class="_1tng6ym"></div>
+                <div class="modal__header-wrapper"></div>
                 <div class="modal__heading">
                   <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                     <div class="_1q9sh65">Select a theme</div>
                   </h1>
                 </div>
-                <div class="_rrmdgl"></div>
+                <div class="modal__heading-wrapper"></div>
               </header>
               <div class="_1qp92agj">
                 <div class="_x5o5nt">
