--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -189,7 +189,7 @@
                                       <div class="_8u4omh">Guests</div>
                                     </div>
                                   </div>
-                                  <div class="_1mqc21n">
+                                  <div class="page-shell-mobile__container-ml-16">
                                     <div
                                       class="header__search-tabs-filter-body-guests-btn-content"
                                       id="stepper-item--0-stepper"
@@ -286,7 +286,7 @@
                                       <div class="_8u4omh">Beds</div>
                                     </div>
                                   </div>
-                                  <div class="_1mqc21n">
+                                  <div class="page-shell-mobile__container-ml-16">
                                     <div
                                       class="header__search-tabs-filter-body-guests-btn-content"
                                       id="stepper-item--1-stepper"
@@ -383,7 +383,7 @@
                                       <div class="_8u4omh">Bedrooms</div>
                                     </div>
                                   </div>
-                                  <div class="_1mqc21n">
+                                  <div class="page-shell-mobile__container-ml-16">
                                     <div
                                       class="header__search-tabs-filter-body-guests-btn-content"
                                       id="stepper-item--2-stepper"
@@ -480,7 +480,7 @@
                                       <div class="_8u4omh">Bathrooms</div>
                                     </div>
                                   </div>
-                                  <div class="_1mqc21n">
+                                  <div class="page-shell-mobile__container-ml-16">
                                     <div
                                       class="header__search-tabs-filter-body-guests-btn-content"
                                       id="stepper-item--3-stepper"
