--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -221,7 +221,7 @@
                                         Security camera(s)
                                       </div>
                                     </div>
-                                    <div class="_1mqc21n">
+                                    <div class="page-shell-mobile__container-ml-16">
                                       <span class="explore-filter-menu__list-content"
                                         ><input
                                           type="checkbox"
@@ -283,7 +283,7 @@
                                         Weapons
                                       </div>
                                     </div>
-                                    <div class="_1mqc21n">
+                                    <div class="page-shell-mobile__container-ml-16">
                                       <span class="explore-filter-menu__list-content"
                                         ><input
                                           type="checkbox"
@@ -324,7 +324,7 @@
                                         Dangerous animals
                                       </div>
                                     </div>
-                                    <div class="_1mqc21n">
+                                    <div class="page-shell-mobile__container-ml-16">
                                       <span class="explore-filter-menu__list-content"
                                         ><input
                                           type="checkbox"
