--- a/experiences.html
+++ b/experiences.html
@@ -926,7 +926,7 @@
       ._1b676g8 {
         margin-right: 16px !important;
       }
-      ._pgfqnw {
+      .page-shell-mobile__lang-icon-currency {
         font-weight: 600 !important;
       }
       ._sb2tj {
@@ -1298,27 +1298,27 @@
         }
       }
       @media (min-width: 744px) {
-        ._1udzt2s {
+        .page-shell-mobile__display-none {
           display: none !important;
         }
       }
       .page-shell-mobile__mb-16 {
         margin-bottom: 16px !important;
       }
-      ._15m7xnk {
+      .page-shell-mobile__footer-spacer {
         display: none !important;
       }
       @media (min-width: 744px) {
-        ._15m7xnk {
+        .page-shell-mobile__footer-spacer {
           display: initial !important;
         }
       }
       @media (min-width: 1128px) {
-        ._15m7xnk {
+        .page-shell-mobile__footer-spacer {
           display: none !important;
         }
       }
-      ._1juxowe {
+      .page-shell-mobile__footer-spacer-wrapper {
         -webkit-box-pack: center !important;
         -ms-flex-pack: center !important;
         display: -webkit-box !important;
@@ -1330,7 +1330,7 @@
         justify-content: center !important;
         margin-bottom: 16px !important;
       }
-      ._xh0r19 {
+      .footer__social-ml-32 {
         margin-left: 32px !important;
       }
       .flex-content-center {
@@ -1360,19 +1360,19 @@
           justify-content: space-between !important;
         }
       }
-      ._19c5bku:not(last-child) {
+      .page-shell-mobile__lang-wrapper:not(last-child) {
         margin-right: 24px !important;
       }
       .mr-2{
         margin-right: 8px !important;
       }
-      ._144l3kj {
+      .page-shell-mobile__lang-text {
         font-weight: 600 !important;
       }
-      ._144l3kj:hover {
+      .page-shell-mobile__lang-text:hover {
         text-decoration: underline !important;
       }
-      ._f2hxk3s {
+      .page-shell-mobile__lang-btn {
         -webkit-box-align: center !important;
         -ms-flex-align: center !important;
         font-family: inherit !important;
@@ -1405,24 +1405,24 @@
         text-decoration: none !important;
       }
       @media (hover: hover) {
-        ._f2hxk3s:hover {
+        .page-shell-mobile__lang-btn:hover {
           cursor: pointer !important;
           color: inherit !important;
           text-decoration: underline !important;
         }
       }
-      ._f2hxk3s:disabled {
+      .page-shell-mobile__lang-btn:disabled {
         cursor: not-allowed !important;
       }
       @media (hover: hover) {
-        ._f2hxk3s:disabled:hover {
+        .page-shell-mobile__lang-btn:disabled:hover {
           text-decoration: none !important;
         }
       }
-      ._f2hxk3s:hover {
+      .page-shell-mobile__lang-btn:hover {
         text-decoration: none !important;
       }
-      ._f2hxk3s:focus {
+      .page-shell-mobile__lang-btn:focus {
         color: inherit !important;
         text-decoration: none !important;
       }
@@ -1435,17 +1435,17 @@
         }
       }
       @media (min-width: 744px) {
-        ._pd8gea {
+        .page-shell-mobile__footer {
           text-align: center !important;
         }
       }
       @media (min-width: 1128px) {
-        ._pd8gea {
+        .page-shell-mobile__footer {
           text-align: left !important;
         }
       }
       @media (min-width: 1128px) {
-        ._wjo0ey {
+        .page-shell-mobile__footer-wrapper {
           overflow: hidden !important;
           padding-right: 2px !important;
         }
@@ -4289,7 +4289,7 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="_pgfqnw">
+                                          <div class="page-shell-mobile__lang-icon-currency">
                                             Add availability
                                           </div>
                                           <div class="_sb2tj">
@@ -4407,7 +4407,7 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="_pgfqnw">
+                                          <div class="page-shell-mobile__lang-icon-currency">
                                             Finish submitting your experience
                                           </div>
                                           <div class="_sb2tj">
@@ -4515,7 +4515,7 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="_pgfqnw">
+                                          <div class="page-shell-mobile__lang-icon-currency">
                                             Finish submitting your experience
                                           </div>
                                           <div class="_sb2tj">
@@ -4619,7 +4619,7 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="_pgfqnw">
+                                          <div class="page-shell-mobile__lang-icon-currency">
                                             Finish submitting your experience
                                           </div>
                                           <div class="_sb2tj">
@@ -4723,7 +4723,7 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="_pgfqnw">
+                                          <div class="page-shell-mobile__lang-icon-currency">
                                             Finish submitting your experience
                                           </div>
                                           <div class="_sb2tj">
@@ -4907,14 +4907,14 @@
                   <div class="footer__copyright">
                     <span class="text-highlight dir dir-ltr">Footer section</span>
                     <section>
-                      <div class="_1udzt2s">
+                      <div class="page-shell-mobile__display-none">
                         <div class="page-shell-mobile__mb-16">
                           <div class="flex">
-                            <span class="_19c5bku"
-                              ><button type="button" class="_f2hxk3s">
+                            <span class="page-shell-mobile__lang-wrapper"
+                              ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="_14tkmhr"
+                                ><span class="page-shell-mobile__lang-icon-wrapper"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -4931,21 +4931,21 @@
                                     <path
                                       d="m8.002.25a7.77 7.77 0 0 1 7.748 7.776 7.75 7.75 0 0 1 -7.521 7.72l-.246.004a7.75 7.75 0 0 1 -7.73-7.513l-.003-.245a7.75 7.75 0 0 1 7.752-7.742zm1.949 8.5h-3.903c.155 2.897 1.176 5.343 1.886 5.493l.068.007c.68-.002 1.72-2.365 1.932-5.23zm4.255 0h-2.752c-.091 1.96-.53 3.783-1.188 5.076a6.257 6.257 0 0 0 3.905-4.829zm-9.661 0h-2.75a6.257 6.257 0 0 0 3.934 5.075c-.615-1.208-1.036-2.875-1.162-4.686l-.022-.39zm1.188-6.576-.115.046a6.257 6.257 0 0 0 -3.823 5.03h2.75c.085-1.83.471-3.54 1.059-4.81zm2.262-.424c-.702.002-1.784 2.512-1.947 5.5h3.904c-.156-2.903-1.178-5.343-1.892-5.494l-.065-.007zm2.28.432.023.05c.643 1.288 1.069 3.084 1.157 5.018h2.748a6.275 6.275 0 0 0 -3.929-5.068z"
                                     ></path></svg></span
-                                ><span class="_144l3kj">English (US)</span>
+                                ><span class="page-shell-mobile__lang-text">English (US)</span>
                               </button></span
-                            ><span class="_19c5bku"
-                              ><button type="button" class="_f2hxk3s">
+                            ><span class="page-shell-mobile__lang-wrapper"
+                              ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="_14tkmhr"
-                                  ><span class="_pgfqnw">₱</span></span
-                                ><span class="_144l3kj">PHP</span>
+                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
                           </div>
                         </div>
-                        <div class="_pd8gea">
-                          <div class="_wjo0ey">
+                        <div class="page-shell-mobile__footer">
+                          <div class="page-shell-mobile__footer-wrapper">
                             <div class="footer__copyright-text" dir="ltr">
                               © 2022 Airbnb, Inc.
                             </div>
@@ -4968,14 +4968,14 @@
                           </div>
                         </div>
                       </div>
-                      <div class="_15m7xnk">
-                        <div class="_1juxowe">
+                      <div class="page-shell-mobile__footer-spacer">
+                        <div class="page-shell-mobile__footer-spacer-wrapper">
                           <div class="flex">
-                            <span class="_19c5bku"
-                              ><button type="button" class="_f2hxk3s">
+                            <span class="page-shell-mobile__lang-wrapper"
+                              ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="_14tkmhr"
+                                ><span class="page-shell-mobile__lang-icon-wrapper"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -4992,19 +4992,19 @@
                                     <path
                                       d="m8.002.25a7.77 7.77 0 0 1 7.748 7.776 7.75 7.75 0 0 1 -7.521 7.72l-.246.004a7.75 7.75 0 0 1 -7.73-7.513l-.003-.245a7.75 7.75 0 0 1 7.752-7.742zm1.949 8.5h-3.903c.155 2.897 1.176 5.343 1.886 5.493l.068.007c.68-.002 1.72-2.365 1.932-5.23zm4.255 0h-2.752c-.091 1.96-.53 3.783-1.188 5.076a6.257 6.257 0 0 0 3.905-4.829zm-9.661 0h-2.75a6.257 6.257 0 0 0 3.934 5.075c-.615-1.208-1.036-2.875-1.162-4.686l-.022-.39zm1.188-6.576-.115.046a6.257 6.257 0 0 0 -3.823 5.03h2.75c.085-1.83.471-3.54 1.059-4.81zm2.262-.424c-.702.002-1.784 2.512-1.947 5.5h3.904c-.156-2.903-1.178-5.343-1.892-5.494l-.065-.007zm2.28.432.023.05c.643 1.288 1.069 3.084 1.157 5.018h2.748a6.275 6.275 0 0 0 -3.929-5.068z"
                                     ></path></svg></span
-                                ><span class="_144l3kj">English (US)</span>
+                                ><span class="page-shell-mobile__lang-text">English (US)</span>
                               </button></span
-                            ><span class="_19c5bku"
-                              ><button type="button" class="_f2hxk3s">
+                            ><span class="page-shell-mobile__lang-wrapper"
+                              ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="_14tkmhr"
-                                  ><span class="_pgfqnw">₱</span></span
-                                ><span class="_144l3kj">PHP</span>
+                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
                           </div>
-                          <div class="_xh0r19">
+                          <div class="footer__social-ml-32">
                             <ul class="footer__social">
                               <li class="footer__social-item">
                                 <a
@@ -5088,8 +5088,8 @@
                           </div>
                         </div>
                         <div class="flex-content-center">
-                          <div class="_pd8gea">
-                            <div class="_wjo0ey">
+                          <div class="page-shell-mobile__footer">
+                            <div class="page-shell-mobile__footer-wrapper">
                               <div class="footer__copyright-text" dir="ltr">
                                 © 2022 Airbnb, Inc.
                               </div>
@@ -5116,8 +5116,8 @@
                         </div>
                       </div>
                       <div class="_ar9stc">
-                        <div class="_pd8gea">
-                          <div class="_wjo0ey">
+                        <div class="page-shell-mobile__footer">
+                          <div class="page-shell-mobile__footer-wrapper">
                             <div class="footer__copyright-text" dir="ltr">
                               © 2022 Airbnb, Inc.
                             </div>
@@ -5141,11 +5141,11 @@
                         </div>
                         <div class="flex">
                           <div class="flex">
-                            <span class="_19c5bku"
-                              ><button type="button" class="_f2hxk3s">
+                            <span class="page-shell-mobile__lang-wrapper"
+                              ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a language</span
-                                ><span class="_14tkmhr"
+                                ><span class="page-shell-mobile__lang-icon-wrapper"
                                   ><svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -5162,19 +5162,19 @@
                                     <path
                                       d="m8.002.25a7.77 7.77 0 0 1 7.748 7.776 7.75 7.75 0 0 1 -7.521 7.72l-.246.004a7.75 7.75 0 0 1 -7.73-7.513l-.003-.245a7.75 7.75 0 0 1 7.752-7.742zm1.949 8.5h-3.903c.155 2.897 1.176 5.343 1.886 5.493l.068.007c.68-.002 1.72-2.365 1.932-5.23zm4.255 0h-2.752c-.091 1.96-.53 3.783-1.188 5.076a6.257 6.257 0 0 0 3.905-4.829zm-9.661 0h-2.75a6.257 6.257 0 0 0 3.934 5.075c-.615-1.208-1.036-2.875-1.162-4.686l-.022-.39zm1.188-6.576-.115.046a6.257 6.257 0 0 0 -3.823 5.03h2.75c.085-1.83.471-3.54 1.059-4.81zm2.262-.424c-.702.002-1.784 2.512-1.947 5.5h3.904c-.156-2.903-1.178-5.343-1.892-5.494l-.065-.007zm2.28.432.023.05c.643 1.288 1.069 3.084 1.157 5.018h2.748a6.275 6.275 0 0 0 -3.929-5.068z"
                                     ></path></svg></span
-                                ><span class="_144l3kj">English (US)</span>
+                                ><span class="page-shell-mobile__lang-text">English (US)</span>
                               </button></span
-                            ><span class="_19c5bku"
-                              ><button type="button" class="_f2hxk3s">
+                            ><span class="page-shell-mobile__lang-wrapper"
+                              ><button type="button" class="page-shell-mobile__lang-btn">
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
-                                ><span class="_14tkmhr"
-                                  ><span class="_pgfqnw">₱</span></span
-                                ><span class="_144l3kj">PHP</span>
+                                ><span class="page-shell-mobile__lang-icon-wrapper"
+                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
                           </div>
-                          <div class="_xh0r19">
+                          <div class="footer__social-ml-32">
                             <ul class="footer__social">
                               <li class="footer__social-item">
                                 <a
