--- a/reviews.html
+++ b/reviews.html
@@ -362,7 +362,7 @@
                               <div>
                                 <span class="text-highlight dir dir-ltr"></span>
                                 <div class="_1xykmvt">
-                                  <div class="_1udzt2s hidden-md">
+                                  <div class="page-shell-mobile__display-none hidden-md">
                                     <div
                                       id="expectations_option_very_high"
                                       aria-disabled="false"
@@ -387,7 +387,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1mqc21n">
+                                          <div class="page-shell-mobile__container-ml-16">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_very_high-row-title"
@@ -441,7 +441,7 @@
                                   </div>
                                 </div>
                                 <div class="_1xykmvt">
-                                  <div class="_1udzt2s hidden-md">
+                                  <div class="page-shell-mobile__display-none hidden-md">
                                     <div
                                       id="expectations_option_high"
                                       aria-disabled="false"
@@ -466,7 +466,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1mqc21n">
+                                          <div class="page-shell-mobile__container-ml-16">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_high-row-title"
@@ -520,7 +520,7 @@
                                   </div>
                                 </div>
                                 <div class="_1xykmvt">
-                                  <div class="_1udzt2s hidden-md">
+                                  <div class="page-shell-mobile__display-none hidden-md">
                                     <div
                                       id="expectations_option_neutral"
                                       aria-disabled="false"
@@ -545,7 +545,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1mqc21n">
+                                          <div class="page-shell-mobile__container-ml-16">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_neutral-row-title"
@@ -599,7 +599,7 @@
                                   </div>
                                 </div>
                                 <div class="_1xykmvt">
-                                  <div class="_1udzt2s hidden-md">
+                                  <div class="page-shell-mobile__display-none hidden-md">
                                     <div
                                       id="expectations_option_low"
                                       aria-disabled="false"
@@ -624,7 +624,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1mqc21n">
+                                          <div class="page-shell-mobile__container-ml-16">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_low-row-title"
@@ -678,7 +678,7 @@
                                   </div>
                                 </div>
                                 <div class="_1xykmvt">
-                                  <div class="_1udzt2s hidden-md">
+                                  <div class="page-shell-mobile__display-none hidden-md">
                                     <div
                                       id="expectations_option_very_low"
                                       aria-disabled="false"
@@ -703,7 +703,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_1mqc21n">
+                                          <div class="page-shell-mobile__container-ml-16">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_very_low-row-title"
